--- a/retwisj/build.gradle
+++ b/retwisj/build.gradle
@@ -1,70 +1,49 @@
-buildscript {
-    repositories {
-        maven { url 'https://repo.springsource.org/plugins-release' }
-    }
-    dependencies {
-        classpath 'org.springframework.build.gradle:bundlor-plugin:0.1.2'
-        classpath 'org.springframework.build.gradle:docbook-reference-plugin:0.2.4'
-    }
-}
-
-description = 'Retwis-J'
-group = 'org.springframework.data'
-
 apply plugin: "java"
 apply plugin: 'eclipse'
 apply plugin: 'eclipse-wtp'
 apply plugin: 'idea'
-apply plugin: 'docbook-reference'
 apply plugin: 'war'	
 
 group = 'org.springframework.data'
 version = "$springDataRedisTwitterVersion"
 
-sourceCompatibility = 1.6
+sourceCompatibility = 1.8
+targetCompatibility = 1.8
 archivesBaseName = "retwisj"
-
+description = 'Retwis-J'
 
 repositories {
-  maven { url "https://repo.springsource.org/libs-snapshot" }
-  maven { url "https://repo.springsource.org/plugins-release" }
+	jcenter()
+	mavenCentral()
 }
 
 dependencies {
-	compile "org.slf4j:slf4j-api:$slf4jVersion"
-	compile "org.slf4j:jcl-over-slf4j:$slf4jVersion"
-	runtime "org.slf4j:slf4j-log4j12:$slf4jVersion"
-	runtime "log4j:log4j:$log4jVersion"
-	compile "redis.clients:jedis:2.1.0"
-	compile "org.codehaus.jackson:jackson-core-asl:$jacksonVersion"
-	compile "org.codehaus.jackson:jackson-mapper-asl:$jacksonVersion"
-	compile "javax.servlet:com.springsource.javax.servlet.jsp.jstl:1.2.0"
-	compile ("org.springframework.data:spring-data-redis:$springRedisVersion") {
+	//implementation platform("org.springframework.data:spring-data-bom:2022.0.1")
+	implementation "org.slf4j:slf4j-api:$slf4jVersion"
+	implementation "org.slf4j:jcl-over-slf4j:$slf4jVersion"
+	runtimeOnly "org.slf4j:slf4j-log4j12:$slf4jVersion"
+	runtimeOnly "log4j:log4j:$log4jVersion"
+	implementation "redis.clients:jedis:2.1.0"
+	implementation "org.codehaus.jackson:jackson-core-asl:$jacksonVersion"
+	implementation "org.codehaus.jackson:jackson-mapper-asl:$jacksonVersion"
+	implementation "javax.servlet:com.springsource.javax.servlet.jsp.jstl:1.2.0"
+	implementation ("org.springframework.data:spring-data-redis:$springRedisVersion") {
         exclude group: 'commons-logging'
     }
-	compile "org.springframework:spring-webmvc:$springVersion"
-	compile "javax.inject:com.springsource.javax.inject:1.0.0"
-	providedCompile "javax.servlet:com.springsource.javax.servlet:2.4.0"
-	providedCompile "javax.servlet:com.springsource.javax.servlet.jsp:2.1.0"
-	compile "javax.servlet:com.springsource.javax.servlet.jsp.jstl:1.2.0"
-	compile "org.apache.taglibs:com.springsource.org.apache.taglibs.standard:1.1.2"
+	implementation "org.springframework:spring-webmvc:$springVersion"
+	implementation "javax.inject:com.springsource.javax.inject:1.0.0"
+	compileOnly "javax.servlet:com.springsource.javax.servlet:2.4.0"
+	compileOnly "javax.servlet:com.springsource.javax.servlet.jsp:2.1.0"
+	implementation "javax.servlet:com.springsource.javax.servlet.jsp.jstl:1.2.0"
+	implementation "org.apache.taglibs:com.springsource.org.apache.taglibs.standard:1.1.2"
 	// Testing
-	testCompile "junit:junit:$junitVersion"
-	testCompile "org.springframework:spring-test:$springVersion"
-	testCompile "org.mockito:mockito-all:$mockitoVersion"
-}
-
-task wrapper(type: Wrapper) {
-    description = 'Generates gradlew[.bat] scripts'
-    gradleVersion = '1.2'
+	testImplementation "junit:junit:$junitVersion"
+	testImplementation "org.springframework:spring-test:$springVersion"
+	testImplementation "org.mockito:mockito-all:$mockitoVersion"
 }
 
 war {
   archiveName = baseName + "." + extension
 }
 
-reference {
-    sourceDir = file('docs/src/reference/docbook')
-}
-    
 defaultTasks 'build'
