--- a/retwisj/gradle.properties
+++ b/retwisj/gradle.properties
@@ -5,7 +5,7 @@ log4jVersion = 1.2.17
 slf4jVersion = 1.6.6
 
 # Common libraries
-springVersion = 3.1.4.RELEASE
+springVersion = 5.3.25
 springRedisVersion = 1.1.0.RELEASE
 jacksonVersion = 1.8.3
 
@@ -13,4 +13,4 @@ jacksonVersion = 1.8.3
 junitVersion = 4.8.1
 mockitoVersion = 1.8.5
 
-springDataRedisTwitterVersion=1.0.0.BUILD-SNAPSHOT
+springDataRedisTwitterVersion=1.0.0.SNAPSHOT
