make the project alive.

--- a/retwisj/build.gradle
+++ b/retwisj/build.gradle
@@ -1,3 +1,6 @@
+plugins {
+    id 'com.google.cloud.tools.jib' version '3.3.1'
+}
 apply plugin: "java"
 apply plugin: 'eclipse'
 apply plugin: 'eclipse-wtp'
@@ -40,6 +43,18 @@ dependencies {
     testImplementation "junit:junit:$junitVersion"
     testImplementation "org.springframework:spring-test:$springVersion"
     testImplementation "org.mockito:mockito-all:$mockitoVersion"
+}
+
+jib {
+    from {
+        image = "tomcat:8"
+    }
+    to {
+        image = "retwisj"
+    }
+    container {
+        appRoot = "/usr/local/tomcat/webapps/retwisj"
+    }
 }
 
 war {
