fix the container image name.

--- a/retwisj/docker-compose.yml
+++ b/retwisj/docker-compose.yml
@@ -1,6 +1,6 @@
 services:
     tomcat:
-        image: localhost/retwisj
+        image: retwisj
         depends_on:
             - redis
         ports:
