--- a/retwisj/build.gradle
+++ b/retwisj/build.gradle
@@ -5,13 +5,13 @@ apply plugin: "java"
 apply plugin: 'eclipse'
 apply plugin: 'eclipse-wtp'
 apply plugin: 'idea'
-apply plugin: 'war'	
+apply plugin: 'war'
 
 group = 'org.springframework.data'
 version = "$springDataRedisTwitterVersion"
 
-sourceCompatibility = 1.8
-targetCompatibility = 1.8
+sourceCompatibility = 17
+targetCompatibility = 17
 archivesBaseName = "retwisj"
 description = 'Retwis-J'
 
@@ -21,24 +21,19 @@ repositories {
 }
 
 dependencies {
-    //implementation platform("org.springframework.data:spring-data-bom:2022.0.1")
-    implementation "org.slf4j:slf4j-api:$slf4jVersion"
-    implementation "org.slf4j:jcl-over-slf4j:$slf4jVersion"
-    runtimeOnly "org.slf4j:slf4j-log4j12:$slf4jVersion"
-    runtimeOnly "log4j:log4j:$log4jVersion"
-    implementation "redis.clients:jedis:2.1.0"
+    implementation platform("org.springframework.data:spring-data-bom:2022.0.1")
+    implementation "redis.clients:jedis:4.3.0"
     implementation "org.codehaus.jackson:jackson-core-asl:$jacksonVersion"
     implementation "org.codehaus.jackson:jackson-mapper-asl:$jacksonVersion"
-    implementation "javax.servlet:com.springsource.javax.servlet.jsp.jstl:1.2.0"
-    implementation ("org.springframework.data:spring-data-redis:$springRedisVersion") {
+    implementation("org.springframework.data:spring-data-redis") {
         exclude group: 'commons-logging'
     }
     implementation "org.springframework:spring-webmvc:$springVersion"
     implementation "javax.inject:com.springsource.javax.inject:1.0.0"
-    compileOnly "javax.servlet:com.springsource.javax.servlet:2.4.0"
-    compileOnly "javax.servlet:com.springsource.javax.servlet.jsp:2.1.0"
-    implementation "javax.servlet:com.springsource.javax.servlet.jsp.jstl:1.2.0"
-    implementation "org.apache.taglibs:com.springsource.org.apache.taglibs.standard:1.1.2"
+    implementation 'commons-beanutils:commons-beanutils:1.9.4'
+    implementation 'jakarta.servlet.jsp.jstl:jakarta.servlet.jsp.jstl-api:3.0.0'
+    implementation 'org.glassfish.web:jakarta.servlet.jsp.jstl:3.0.0'
+    implementation "org.apache.logging.log4j:log4j-core:2.19.0"
     // Testing
     testImplementation "junit:junit:$junitVersion"
     testImplementation "org.springframework:spring-test:$springVersion"
@@ -47,7 +42,7 @@ dependencies {
 
 jib {
     from {
-        image = "tomcat:8"
+        image = "tomcat:10"
     }
     to {
         image = "retwisj"
