--- a/retwisj/src/main/webapp/WEB-INF/web.xml
+++ b/retwisj/src/main/webapp/WEB-INF/web.xml
@@ -1,17 +1,19 @@
 <?xml version="1.0" encoding="ISO-8859-1"?>
-<web-app version="2.4" xmlns="http://java.sun.com/xml/ns/j2ee" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-		xsi:schemaLocation="http://java.sun.com/xml/ns/j2ee https://java.sun.com/xml/ns/j2ee/web-app_2_4.xsd">
+<web-app xmlns="https://jakarta.ee/xml/ns/jakartaee"
+         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+         xsi:schemaLocation="https://jakarta.ee/xml/ns/jakartaee https://jakarta.ee/xml/ns/jakartaee/web-app_5_0.xsd"
+         version="5.0">
 
-	<display-name>Spring Data RetwisJ</display-name>
+    <display-name>Spring Data RetwisJ</display-name>
 
-	<description>Spring Data Redis-based Twitter-clone sample application</description>
+    <description>Spring Data Redis-based Twitter-clone sample application</description>
 
-	<context-param>
-		<param-name>webAppRootKey</param-name>
-		<param-value>retwisj.root</param-value>
-	</context-param>
+    <context-param>
+        <param-name>webAppRootKey</param-name>
+        <param-value>retwisj.root</param-value>
+    </context-param>
 
-	<context-param>
+    <context-param>
 		<param-name>log4jConfigLocation</param-name>
 		<param-value>/WEB-INF/classes/log4j.properties</param-value>
 	</context-param>
