--- a/retwisj/.editorconfig
+++ b/retwisj/.editorconfig
@@ -300,7 +300,8 @@ ij_xml_space_around_equals_in_attribute = false
 ij_xml_space_inside_empty_tag = false
 ij_xml_text_wrap = normal
 
-[{*.htm,*.html,*.sht,*.shtm,*.shtml}]
+[{*.htm,*.html,*.sht,*.shtm,*.shtml,*.jsp*}]
+indent_size = 2
 ij_html_add_new_line_before_tags = body, div, p, form, h1, h2, h3
 ij_html_align_attributes = true
 ij_html_align_text = false
